# pts_bomber

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  package-lock.json  tailwind.config.js
src/: app.rs  attack.rs  hwid.rs  index.html  main.rs  phone.rs  services.rs  tailwind.css  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: _main.rs  main.rs
