[package]
name = "pts_bomber"
version = "0.0.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
chrono = "0.4.31"
ansi_term = "0.12.1"