[package]
name = "pts_bomber-ui"
version = "2.0.0"
edition = "2021"

[dependencies]
sycamore = { version = "0.9.0-beta.4", features = ["suspense"] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
js-sys = "0.3.70"
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"

[workspace]
members = ["src-tauri"]
