[package]
name = "pts_bomber-ui"
version = "2.0.0"
edition = "2021"

[dependencies]
sycamore = { version = "0.8.2", features = ["suspense"] }
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
js-sys = "0.3.72"
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"

[workspace]
members = ["src-tauri"]
